# boilerplate-axum-backend

./: .gitignore  Cargo.toml  Makefile  docker-compose.yml
examples/: dev.rs
src/: main.rs
src/config/: mod.rs
src/controllers/: user_controller.rs
src/database/: mod.rs
src/error/: mod.rs
src/models/: user_models.rs
src/responses/: mod.rs
src/routes/: health_route.rs  mod.rs  user_routes.rs
src/routes/routes_health/: mod.rs
src/routes/routes_hello/: mod.rs
src/routes/routes_user/: handler_delete_user.rs  handler_get_user.rs  handler_login.rs  handler_signup.rs  handler_update_user.rs  mod.rs
src/types/: mod.rs
src/utils/: mod.rs
